<resources>
    <string name="app_name">DM114</string>

    <string name="sign_out">Sign out</string>
    <string name="delete">Delete</string>
    <string name="list">List</string>

    <string name="user_name">User Name</string>
    <string name="order_id">Order Id</string>
    <string name="status">Status</string>
    <string name="product_code">Product Code</string>
    <string name="date">Date</string>
    <string name="product">Product</string>
    <string name="name">Name</string>
    <string name="code">Code</string>
    <string name="price">Price</string>
</resources>
